exports[`highlight suggestion by mousing over suggestion`] = `
<li
  className=""
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}>
  apple
</li>
`;

exports[`select suggestion by clicking suggestion`] = `
<li
  className="highlighted"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}>
  apple
</li>
`;
